fix for SCHEDULING-300 and SCHEDULING-318
git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/proactive/scheduling/trunk@12944 28e8926c-6b08-0410-baaa-805c5e19b8d6